[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/Screens/MainScreen.gd" type="Script" id=1]
[ext_resource path="res://src/UserInterFace/Quitbutton.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UserInterFace/ChangeScenebutton.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/TileMap_BackGround/background.png" type="Texture" id=4]
[ext_resource path="res://src/UserInterFace/Title.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/ui_theme.tres" type="Theme" id=6]
[ext_resource path="res://assets/ui/test_button/test_button2.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/test_button/test_button1.png" type="Texture" id=8]
[ext_resource path="res://Sounds/bell_ding.ogg" type="AudioStream" id=9]

[node name="MainScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 1 )

[node name="background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 4.0
margin_right = 3.0
margin_bottom = 4.0
texture = ExtResource( 4 )
expand = true

[node name="Title" parent="." instance=ExtResource( 5 )]
margin_right = 144.0

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 780.0
margin_top = 524.0
margin_right = 1145.0
margin_bottom = 728.0

[node name="PlayButton" parent="Menu" instance=ExtResource( 3 )]
margin_right = 365.0

[node name="Quitbutton" parent="Menu" instance=ExtResource( 2 )]
margin_right = 365.0

[node name="HSlider" type="HSlider" parent="."]
margin_left = 1408.0
margin_top = 112.0
margin_right = 1808.0
margin_bottom = 152.0
max_value = 1.0
step = 0.05
value = 0.5

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 1480.0
margin_top = 168.0
margin_right = 1528.0
margin_bottom = 186.0
rect_scale = Vector2( 6, 6 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="TextureButton"]
stream = ExtResource( 9 )

[connection signal="button_down" from="Menu/PlayButton" to="." method="_on_PlayButton_button_down"]
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
